--- a/app/views/citizen-truelayer/capitalshares.html
+++ b/app/views/citizen-truelayer/capitalshares.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <head>
 
