--- a/app/views/citizen-truelayer/national-savings-amount.html
+++ b/app/views/citizen-truelayer/national-savings-amount.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -28,16 +28,16 @@
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="national-savings-amount">
             <label class="govuk-c-label">Enter amount</label>
 
-          </label>
-          <div class="govuk-o-form-group">
-      £ <input class="govuk-c-input govuk-!-width-two-thirds" id="nsi-amount" name="nsi-amount" placeholder="0.00" type="number">
-          </div>
-          <input class="govuk-c-button" type="submit" value="Continue">
+            </label>
+            <div class="govuk-o-form-group">
+              £ <input class="govuk-c-input govuk-!-width-two-thirds" id="nsi-amount" name="nsi-amount" placeholder="0.00" type="number">
+            </div>
+            <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
+        </div>
       </div>
-    </div>
   </main>
-</div>
+  </div>
 
-{% endblock %}
+  {% endblock %}
