--- a/app/views/citizen-truelayer/capitalselect.html
+++ b/app/views/citizen-truelayer/capitalselect.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
