--- a/app/views/citizen-truelayer/identify-outgoings-with-housing-tax.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing-tax.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block proposition_header %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block proposition_header %}
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block header_class %}
 <!-- blank to remove the proposition header -->
