--- a/app/views/citizen-truelayer/premium-bonds-amount.html
+++ b/app/views/citizen-truelayer/premium-bonds-amount.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -25,21 +25,21 @@
           What is the value of your Premium Bonds?
         </h1>
 
-                <form class="form" action="capital-bonds" method="post">
+        <form class="form" action="capital-bonds" method="post">
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="premium-bonds-amount">
             <label class="govuk-c-label">Enter amount</label>
 
-        <form class="form" action="capital-bonds" method="post">
+            <form class="form" action="capital-bonds" method="post">
 
-          <div class="govuk-o-form-group">
-           £ <input class="govuk-c-input govuk-!-width-two-thirds" id="pb-amount" name="pb-amount" placeholder="0.00" type="number">
+              <div class="govuk-o-form-group">
+                £ <input class="govuk-c-input govuk-!-width-two-thirds" id="pb-amount" name="pb-amount" placeholder="0.00" type="number">
+              </div>
+              <input class="govuk-c-button" type="submit" value="Continue">
+
+            </form>
           </div>
-          <input class="govuk-c-button" type="submit" value="Continue">
-
-        </form>
       </div>
-    </div>
   </main>
-</div>
+  </div>
 
-{% endblock %}
+  {% endblock %}
