--- a/app/views/citizen-truelayer/property-amount.html
+++ b/app/views/citizen-truelayer/property-amount.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -29,7 +29,7 @@
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="property-amount">
             <label class="govuk-c-label">Enter the estimated value of your property</label>
 
-          </label> <br>£
+            </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="property-amount" name="property-amount" placeholder="0.00" type="number">
           </div>
 
