--- a/app/views/citizen-truelayer/identify-outgoings-housing-tax-childcare.html
+++ b/app/views/citizen-truelayer/identify-outgoings-housing-tax-childcare.html
@@ -457,7 +457,7 @@
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                  Add item
+                  Add a transaction
                 </a>
               </li>
             </ul>
@@ -482,7 +482,7 @@
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                  Add item
+                  Add a transaction
                 </a>
               </li>
             </ul>
