--- a/app/views/citizen-truelayer/identify-outgoings-with-housing-tax.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing-tax.html
@@ -456,7 +456,7 @@
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                  Add item
+                  Add a transaction
                 </a>
               </li>
             </ul>
@@ -472,7 +472,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="select-childcare">
-                  Add item
+                  Add a transaction
                 </a>
               </li>
             </ul>
