Rename Continue buttons to Add on select transaction screens

--- a/app/views/citizen-truelayer/select-childcare.html
+++ b/app/views/citizen-truelayer/select-childcare.html
@@ -474,7 +474,7 @@
 
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-housing-tax-childcare" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-housing-tax-childcare" role="button">Add</a>
 
       </div>
 
