--- a/app/views/citizen-truelayer/select-council-tax.html
+++ b/app/views/citizen-truelayer/select-council-tax.html
@@ -483,7 +483,7 @@
 
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-with-housing-tax" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-with-housing-tax" role="button">Add</a>
 
       </div>
 
