--- a/app/views/citizen-truelayer/select-housing.html
+++ b/app/views/citizen-truelayer/select-housing.html
@@ -493,7 +493,7 @@
 
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-with-housing" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="identify-outgoings-with-housing" role="button">Add</a>
 
       </div>
 
