--- a/app/views/citizen-truelayer/select-other.html
+++ b/app/views/citizen-truelayer/select-other.html
@@ -230,7 +230,7 @@
         </table>
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-income-salary-other" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="identify-income-salary-other" role="button">Add</a>
 
       </div>
 
