--- a/app/views/citizen-truelayer/select-salary.html
+++ b/app/views/citizen-truelayer/select-salary.html
@@ -165,7 +165,7 @@
         </table>
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-income-with-salary" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="identify-income-with-salary" role="button">Add</a>
 
       </div>
 
