--- a/app/views/citizen-truelayer/paid-in-bank.html
+++ b/app/views/citizen-truelayer/paid-in-bank.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
