Fix back buttons to avoid open banking screens

--- a/app/views/citizen-truelayer/identify-income.html
+++ b/app/views/citizen-truelayer/identify-income.html
@@ -406,7 +406,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="bank-success">Back</a>
+    <a class="govuk-c-back-link" href="obmultiple">Back</a>
 
     <p class="govuk-body"></p>
 
