--- a/app/views/citizen-truelayer/obmultiple.html
+++ b/app/views/citizen-truelayer/obmultiple.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="bank-success">Back</a>
+    <a class="govuk-c-back-link" href="obbank">Back</a>
     <p class="govuk-body"></p>
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
