redirect solicitor to start at conclusion of p1

--- a/app/views/solicitor/confirm-contact.html
+++ b/app/views/solicitor/confirm-contact.html
@@ -26,14 +26,14 @@
           <p></p>
           <h2>You have successfully created a new legal aid application</h2>
           <p></p>
-          <form class="form" action="case-dashboard" method="post">
+          <form class="form" action="start" method="post">
 
             <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
               <p class="govuk-c-panel__body">Case reference number:</p>
               <h2 class="govuk-c-panel__title">2018/LAA/4ewrqfdd</h2>
-              </div>
+            </div>
 
-              <h2 class="govuk-heading-m">
+            <h2 class="govuk-heading-m">
             We have sent your client a secure link to complete their financial assessment online.
               </h2>
 
