amend p1 to include crime application

--- a/app/views/solicitor/attempts-settle.html
+++ b/app/views/solicitor/attempts-settle.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <body>
   <div class="govuk-o-width-container">
@@ -49,7 +45,7 @@
             <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
               Please confirm why no attempts to settle have been made
             </label>
-            <textarea id="more-detail" name="more-detail" rows="5" class="govuk-c-textarea"></textarea>
+              <textarea id="more-detail" name="more-detail" rows="5" class="govuk-c-textarea"></textarea>
             </div>
 
             <input class="govuk-c-button" type="submit" value="Continue">
