--- a/app/views/solicitor/court-crime-heard.html
+++ b/app/views/solicitor/court-crime-heard.html
@@ -15,18 +15,32 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="photo-evidence-stocks-mobile-confirm">Back</a>
+      <a class="govuk-c-back-link" href="court-crime-commenced">Back</a>
 
+      <p class="govuk-body"></p>
       <div class="govuk-o-grid">
-
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
-            <p class="govuk-c-panel__body">Now follow the instructions on your device, and return here when complete...</p>
+          <h2 class="govuk-heading-xl">
+            In which court is the case being heard?
+          </h2>
 
-          </div>
+          <form action="remanded" method="post">
 
-          <a class="govuk-c-button" role="button" href="photo-evidence-stocks-qr">Continue</a>
+            <div class="govuk-form-group">
+
+              <select class="govuk-c-select" id="court-heard" name="court-heard">
+                <option value="Court 1">Court 1</option>
+                <option value="Court 2">Court 2</option>
+                <option value="Court 3">Court 3</option>
+              </select>
+            </div>
+
+            <br><br>
+
+            <input class="govuk-c-button" type="submit" value="Continue">
+
+          </form>
 
         </div>
       </div>
