--- a/app/views/solicitor/legal-help.html
+++ b/app/views/solicitor/legal-help.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <body>
   <div class="govuk-o-width-container">
@@ -20,16 +16,16 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="urgent-application">Back</a>
-    <p class="govuk-body"></p>
+      <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">              
+          <h2 class="govuk-heading-xl">
             Why is your client applying for legal representation?
           </h2>
 
-            <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
+          <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
               Enter reasons
             </label>
             <textarea id="more-detail" name="more-detail" rows="5" class="govuk-c-textarea"></textarea>
