--- a/app/views/solicitor/merits-final-declaration.html
+++ b/app/views/solicitor/merits-final-declaration.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 
@@ -17,7 +17,7 @@
   <main role="main" class="govuk-o-main-wrapper">
 
     <a class="govuk-c-back-link" href="merits-declarations">Back</a>
-      <p class="govuk-body"></p>
+    <p class="govuk-body"></p>
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
