--- a/app/views/solicitor/merits-introduction.html
+++ b/app/views/solicitor/merits-introduction.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <body>
   <div class="govuk-o-width-container">
@@ -28,14 +24,15 @@
 
           <h2 class="govuk-heading-xl">Merits interview</h2>
 
-          <p class="govuk-body">Use this interview to collect information about the circumstances and facts of the client's case. This will help the Director of Legal Aid to decide if the case satisfies the criteria for the grant of legal aid, under the appropriate Regulations and Statute.
+          <p class="govuk-body">Use this interview to collect information about the circumstances and facts of the client's case. This will help the Director of Legal Aid to decide if the case satisfies the criteria for the grant of legal aid, under the appropriate Regulations
+            and Statute.
           </p>
 
-          <p class="govuk-body">If your application or any part of it is for Exceptional Funding under section 10 of the Legal Aid, Sentencing and Punishment of
-            Offenders Act 2012 you will be asked additional questions to enable the Director to make a separate decision against the relevent criteria.
+          <p class="govuk-body">If your application or any part of it is for Exceptional Funding under section 10 of the Legal Aid, Sentencing and Punishment of Offenders Act 2012 you will be asked additional questions to enable the Director to make a separate decision against
+            the relevent criteria.
           </p>
 
-            <a class="govuk-c-button govuk-c-button" href="urgent-application" role="button">Continue</a>
+          <a class="govuk-c-button govuk-c-button" href="urgent-application" role="button">Continue</a>
         </div>
       </div>
     </main>
