--- a/app/views/solicitor/national-insurance.html
+++ b/app/views/solicitor/national-insurance.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <body>
   <div class="govuk-o-width-container">
@@ -33,25 +29,25 @@
 
           <form class="form" action="enter-NI" method="post">
 
-                      <div class="govuk-c-radios">
-            <fieldset class="govuk-c-fieldset">
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-1">
+            <div class="govuk-c-radios">
+              <fieldset class="govuk-c-fieldset">
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-1">
                 Yes
               </label>
-              </div>
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-2" name="benefits-in-kind" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="benefits-in-kind-2" name="benefits-in-kind" type="radio" value="no">
+                  <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
                 No
               </label>
-              </div>
-            </fieldset>
-          </div>
+                </div>
+              </fieldset>
+            </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
-        </form>
+            <input class="govuk-c-button" type="submit" value="Continue">
+          </form>
 
         </div>
       </div>
