--- a/app/views/solicitor/application-task-list-with-means.html
+++ b/app/views/solicitor/application-task-list-with-means.html
@@ -1,8 +1,5 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
+
 <style>
   .grid-row:after,
   #content:after,
@@ -450,7 +447,7 @@
           Apply for legal aid
         </h2>
 
- 
+
         <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
           <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
             <li>You must complete each section before you can submit the application.</li>
