--- a/app/views/solicitor/application-task-list.html
+++ b/app/views/solicitor/application-task-list.html
@@ -1,8 +1,5 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
+
 <style>
   .grid-row:after,
   #content:after,
