--- a/app/views/solicitor/category-law-civil.html
+++ b/app/views/solicitor/category-law-civil.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block header_class %}
-<!-- blank to remove the proposition header -->
-{% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Apply for legal aid {% endblock %} {% block content %}
 
 <body>
   <div class="govuk-o-width-container">
@@ -24,28 +20,27 @@
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">
-            What is the category of law?
-          </h2>
+
+          <h2 class="govuk-heading-xl">What is the category of law?</h2>
 
           <form action="basic-details" method="post">
 
             <select class="govuk-c-select" id="select-category" name="category">
-                <option value="Clinical negligence">Clinical negligence</option>
-                <option value="Community care">Community care</option>
-                <option value="Discrimination">Discrimination</option>
-                <option value="Domestic abuse">Domestic abuse</option>
-                <option value="Education">Education</option>
-                <option value="Employment">Employment</option>
-                <option value="Family">Family</option>
-                <option value="Housing">Housing</option>
-                <option value="Immigration and asylum">Immigration and asylum</option>
-                <option value="Mental health">Mental health</option>
-                <option value="Personal injury">Personal injury</option>
-                <option value="Public law">Public law</option>
-                <option value="Trouble with the police and other public authorities">Trouble with the police and other public authorities</option>
-                <option value="Welfare benefits">Welfare benefits</option>
-              </select>
+              <option value="Clinical negligence">Clinical negligence</option>
+              <option value="Community care">Community care</option>
+              <option value="Discrimination">Discrimination</option>
+              <option value="Domestic abuse">Domestic abuse</option>
+              <option value="Education">Education</option>
+              <option value="Employment">Employment</option>
+              <option value="Family">Family</option>
+              <option value="Housing">Housing</option>
+              <option value="Immigration and asylum">Immigration and asylum</option>
+              <option value="Mental health">Mental health</option>
+              <option value="Personal injury">Personal injury</option>
+              <option value="Public law">Public law</option>
+              <option value="Trouble with the police and other public authorities">Trouble with the police and other public authorities</option>
+              <option value="Welfare benefits">Welfare benefits</option>
+            </select>
 
             <br><br>
 
