--- a/app/views/solicitor/employed.html
+++ b/app/views/solicitor/employed.html
@@ -15,32 +15,31 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="application-task-list">Back</a>
+      <a class="govuk-c-back-link" href="court-crime-heard">Back</a>
+
       <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">How do you want to review the bank transactions?</h2>
+          <h2 class="govuk-heading-xl">Is your client employed (excluding being self employed)?</h2>
 
-          <form action="/solicitor/review-income" method="post">
+          <form action="/solicitor/employed-status" method="get">
 
             <div class="govuk-c-radios">
               </br>
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="new" name="newOrResume" type="radio" value="new" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="new"><strong>Full statement</strong><br>
-                  Fully itemised bank statements from the last 3 months</label>
+                  <input class="govuk-c-radios__input" id="yes" name="employed" type="radio" value="Yes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="yes">Yes</label>
                 </div>
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="resume" name="newOrResume" type="radio" value="resume">
-                  <label class="govuk-c-label govuk-c-radios__label" for="resume"><strong>Summary view</strong><br>
-                  All client selections plus any high value transactions not selected</label>
+                  <input class="govuk-c-radios__input" id="no" name="employed" type="radio" value="No">
+                  <label class="govuk-c-label govuk-c-radios__label" for="no">No</label>
                 </div>
               </fieldset>
             </div>
 
-            <input class="govuk-c-button" type="submit" value="Continue">
+            <input class="govuk-c-button" type="submit" value="Next">
 
           </form>
 
